<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activitys.AddGuestActivity"
    android:background="#F2EFE5"
    android:gravity="center">
    
    <LinearLayout
        android:layout_width="354dp"
        android:layout_height="wrap_content"
        android:background="@drawable/login_rounded"
        android:backgroundTint="#E3E1D9"
        android:orientation="vertical"
        android:padding="30dp">

        <TextView
            android:id="@+id/add_guest_fullName_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/full_name_guest" />

        <EditText
            android:id="@+id/add_guest_fullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/login_rounded"
            android:backgroundTint="#F2EFE5"
            android:ems="10"
            android:hint="@string/full_name_guest"
            android:inputType="text"
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp" />

        <TextView
            android:id="@+id/add_guest_date_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/guest_date_text" />

        <EditText
            android:id="@+id/add_guest_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/login_rounded"
            android:backgroundTint="#F2EFE5"
            android:ems="10"
            android:hint="@string/guest_date_text"
            android:inputType="text"
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp" />

        <TextView
            android:id="@+id/add_guest_timeFrom_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/guest_timeFrom_text" />

        <EditText
            android:id="@+id/add_guest_timeFrom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/login_rounded"
            android:backgroundTint="#F2EFE5"
            android:ems="10"
            android:hint="@string/guest_timeFrom_text"
            android:inputType="text"
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp" />

        <TextView
            android:id="@+id/add_guest_timeTo_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/guest_timeTo_text" />

        <EditText
            android:id="@+id/add_guest_timeTo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/login_rounded"
            android:backgroundTint="#F2EFE5"
            android:ems="10"
            android:hint="@string/guest_timeTo_text"
            android:inputType="text"
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/add_guest_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/login_rounded"
                android:backgroundTint="#F2EFE5"
                android:text="@string/text_cancel"
                android:layout_marginRight="10dp" />

            <Button
                android:id="@+id/add_guest_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/login_rounded"
                android:backgroundTint="#F2EFE5"
                android:text="@string/text_create" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>