<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activitys.EditRepairActivity"
    android:background="#F2EFE5"
    android:gravity="center">
    
    <LinearLayout
        android:layout_width="354dp"
        android:layout_height="wrap_content"
        android:background="@drawable/login_rounded"
        android:backgroundTint="#E3E1D9"
        android:orientation="vertical"
        android:padding="30dp">

        <TextView
            android:id="@+id/edit_repair_title_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/repair_title" />

        <EditText
            android:id="@+id/edit_repair_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/login_rounded"
            android:backgroundTint="#F2EFE5"
            android:ems="10"
            android:hint="@string/repair_title"
            android:inputType="text"
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp" />

        <TextView
            android:id="@+id/edit_repair_description_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/repair_description" />

        <EditText
            android:id="@+id/edit_repair_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/login_rounded"
            android:backgroundTint="#F2EFE5"
            android:ems="10"
            android:hint="@string/repair_description"
            android:inputType="text"
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp" />

        <TextView
            android:id="@+id/edit_repair_status_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/status_text" />

        <Spinner
            android:id="@+id/edit_repair_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/login_rounded"
            android:backgroundTint="#F2EFE5"
            android:ems="10"
            android:hint="@string/status_text"
            android:inputType="text"
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/edit_repair_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/login_rounded"
                android:backgroundTint="#F2EFE5"
                android:text="@string/text_cancel"
                android:layout_marginRight="10dp" />

            <Button
                android:id="@+id/edit_repair_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/login_rounded"
                android:backgroundTint="#F2EFE5"
                android:text="@string/text_save" />
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>